--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,8 @@
 <html dir="ltr">
 <head>
 	<title>Mr Tech</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="C:\Users\mahmo\OneDrive\Desktop\vscode\calculator\html\path\to\2022-02-15 02-01-43.mkv"
-    />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root></app-root>
